fix: unreadable badge icon on certain colors (#3810)

--- a/framework/core/less/common/Badge.less
+++ b/framework/core/less/common/Badge.less
@@ -4,7 +4,7 @@
   height: var(--size);
   border-radius: calc(~"var(--size) / 2");
   background: var(--badge-bg);
-  color: var(--badge-color);
+  color: var(--contrast-color, var(--badge-color));
   display: inline-flex;
   align-items: center;
   justify-content: center;
